2004-07-02  Benjamin Otte  <otte@gnome.org>

	* ext/ogg/gstogg.c: (plugin_init):
	  we require bytestream now
	* ext/ogg/gstoggdemux.c: 
	  huge diff to implement chain setup in a fast and generic way. This
	  improves tag reading and startup of huge files (read: Theora videos)
	  quite a bit. It probably contains bugs, too, so please test.
	  Seeking is not improved to the fast method.

2004-06-29  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_push):
	* ext/ogg/gstoggmux.c:
	Fix memleak in oggdemux when running unconnected pads.
	doc update in mux, start working on keyframe mode.

2004-06-29  Benjamin Otte  <otte@gnome.org>

	* sys/oss/gstosssink.c:
	* sys/oss/gstosssrc.c:
	  advertise correct template caps - we indeed do non-native endianness
	  and 8bit audio has no endianness
	* sys/ximage/ximagesink.c: (gst_ximagesink_getcaps):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_getcaps):
	  avoid (wrong) duplications in getcaps function and return
	  template caps

2004-06-29  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_recover_policy_get_type),
	(gst_multifdsink_class_init), (gst_multifdsink_add),
	(gst_multifdsink_remove), (gst_multifdsink_clear),
	(gst_multifdsink_client_remove),
	(gst_multifdsink_handle_client_read),
	(gst_multifdsink_client_queue_data),
	(gst_multifdsink_client_queue_caps),
	(gst_multifdsink_client_queue_buffer),
	(gst_multifdsink_handle_client_write),
	(gst_multifdsink_recover_client), (gst_multifdsink_queue_buffer),
	(gst_multifdsink_handle_clients), (gst_multifdsink_thread),
	(gst_multifdsink_init_send), (gst_multifdsink_close):
	Fix wrong GList iteration that could crash the server when
	more then 2 clients disconnect at the same time. Read all the
	pending commands in one batch to recover from command storms under
	very heavy load.

2004-06-28  Wim Taymans  <wim@fluendo.com>

	* gst/videomixer/videomixer.c: (gst_videomixer_pad_get_type),